--- a/styles.css
+++ b/styles.css
@@ -71,14 +71,18 @@ main {
     max-width: 1440px;
     margin: 60px auto;
 }
+
+.font-size {
+    font-size: 18px;
+}
+
 .titre h1 {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
 }
 
 .titre p {
     margin: 10px 0;
-    font-size: 18px;
 }
 
 .recherche {
@@ -120,7 +124,6 @@ button {
     color: white;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    font-size: 18px;
     padding: 18px;
     cursor: pointer;
 }
@@ -131,9 +134,7 @@ button {
     align-items: center;
     margin-bottom: 35px;
 }
-.filtres h2 {
-    font-size: 18px;
-}
+
 .filtres ul {
     display: inline-flex;
     flex-direction: row;
@@ -144,7 +145,7 @@ button {
 .filtres ul li {
     display: inline;
     margin-left: 25px;
-    font-weight: 700;
+    font-weight: bold;
     border: 2px solid #e2e2e2;
     padding: 0 20px 0 0;
     margin-top: 10px;
@@ -170,16 +171,12 @@ button {
 }
 .infos i {
     color: #0065FC;
-    font-size: 18px;
     padding: 5px 10px;
     border: 2px solid #f2f2f2;
     border-radius: 50px;
     margin-right: 20px;
 }
 
-.infos p {
-    font-size: 18px;
-}
 /*--------------------FOOTER-------------------*/
 
 footer {
