--- a/styles.css
+++ b/styles.css
@@ -71,18 +71,14 @@ main {
     max-width: 1440px;
     margin: 60px auto;
 }
-
-.font-size {
-    font-size: 18px;
-}
-
 .titre h1 {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 700;
 }
 
 .titre p {
     margin: 10px 0;
+    font-size: 18px;
 }
 
 .recherche {
@@ -124,6 +120,7 @@ button {
     color: white;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
+    font-size: 18px;
     padding: 18px;
     cursor: pointer;
 }
@@ -134,7 +131,9 @@ button {
     align-items: center;
     margin-bottom: 35px;
 }
-
+.filtres h2 {
+    font-size: 18px;
+}
 .filtres ul {
     display: inline-flex;
     flex-direction: row;
@@ -145,7 +144,7 @@ button {
 .filtres ul li {
     display: inline;
     margin-left: 25px;
-    font-weight: bold;
+    font-weight: 700;
     border: 2px solid #e2e2e2;
     padding: 0 20px 0 0;
     margin-top: 10px;
@@ -168,15 +167,103 @@ button {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    margin-bottom: 40px;
 }
 .infos i {
     color: #0065FC;
+    font-size: 18px;
     padding: 5px 10px;
     border: 2px solid #f2f2f2;
     border-radius: 50px;
     margin-right: 20px;
 }
 
+.infos p {
+    font-size: 18px;
+}
+
+/*-------------------ACTIVITES-----------------*/
+#activites {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.container-activites {
+    display: grid;
+    grid-gap: 30px;
+    margin: 30px 0 60px 0;
+    height: 500px;
+    grid-template-rows: 3fr 0.3fr 0.3fr 0.3fr 0.3fr 3fr;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: flex-start;
+    grid-template-areas:
+        "activity-1 activity-2 activity-4 activity-5"
+        "activity-1 activity-2 activity-4 activity-5"
+        "activity-1 activity-2 activity-4 activity-6"
+        "activity-1 activity-2 activity-4 activity-6"
+        "activity-1 activity-3 activity-4 activity-6"
+        "activity-1 activity-3 activity-4 activity-6";
+}
+
+.cards {
+    box-shadow: 10px 10px 20px 0 rgba(0,0,0,0.2);
+    font-size: 30px;
+    position: relative;
+    border-radius: 20px;
+    
+}
+
+.card-1 {
+    grid-area: activity-1;
+}
+
+.card-2 {
+    grid-area: activity-2;
+}
+
+.card-3 {
+    grid-area: activity-3;
+}
+
+.card-4 {
+    grid-area: activity-4;
+}
+
+.card-5 {
+    grid-area: activity-5;
+}
+
+.card-6 {
+    grid-area: activity-6;
+}
+
+.card-bloc {
+    width: 100%;
+    height: 100%;
+}
+
+.card-bloc img {
+    width: 100%;
+    height: 99%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.card-bloc a {
+    text-decoration: none;
+    color: initial;
+    cursor: pointer;
+}
+
+.card-bloc h2 {
+    font-size: 18px;
+    background: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 10px 0 10px 15px;
+    border-radius: 0 0 20px 20px;
+}
 /*--------------------FOOTER-------------------*/
 
 footer {
@@ -194,6 +281,7 @@ footer {
     padding: 30px 0;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
 }
 
 .footer-title {
