--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: 'Raleway', sans-serif;
+    width: 100vw;
 }
 
 /*------------------------ HEADER ------------------*/
@@ -69,10 +70,10 @@ nav li a {
 /*-------------------- MAIN RECHERCHE-------------------*/
 main {
     max-width: 1440px;
-    margin: 60px auto;
 }
+
 .titre h1 {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
 }
 
@@ -82,7 +83,8 @@ main {
 }
 
 .recherche {
-    margin: 35px 0 30px;
+    margin: 35px 0;
+    width: 100%;
     display: inline-flex;
     flex-direction: row;
 }
@@ -100,7 +102,7 @@ main {
 input {
     padding: 0 20px 0;
     height: 55px;
-    width: 240px;
+    width: 250px;
     border: none;
     border-top: 1px solid #f2f2f2;
     border-bottom: 1px solid #f2f2f2;
@@ -113,7 +115,7 @@ input::placeholder {
     font-size: 18px;
 }
 
-button {
+.recherche button:first-of-type {
     border: none;
     border-radius: 0 14px 14px 0;
     background: #0065fc;
@@ -125,6 +127,10 @@ button {
     cursor: pointer;
 }
 
+.recherche button:last-of-type {
+    display: none;
+}
+
 .filtres {
     display: flex;
     justify-content: flex-start;
@@ -133,6 +139,8 @@ button {
 }
 .filtres h2 {
     font-size: 18px;
+    justify-self:left;
+    align-self: center;
 }
 .filtres ul {
     display: inline-flex;
@@ -182,7 +190,252 @@ button {
     font-size: 18px;
 }
 
+@media screen and (max-width: 576px) {
+
+    input {
+        width: 240px;
+    }
+
+    .recherche button:first-of-type {
+        display: none;
+    }
+
+    .recherche button:last-of-type {
+        display: block;
+        border: none;
+        border-radius: 15px;
+        background: #0065fc;
+        color: white;
+        padding: 18px;
+        cursor: pointer;
+        width: auto;
+    }
+
+    .recherche button i:last-of-type {
+        background: #0065FC;
+        font-size: 18px;
+        width: auto;
+    }
+
+    .filtres {
+        flex-direction: column;
+    }
+
+    .filtres ul li {
+        margin-left: 0;
+        margin: 5px;
+        padding-right: 10px;
+    }
+
+    .filtres-list {
+        margin-right: 0;
+    }
+
+}
+
+/*-------------------HEBERGEMENTS----------------*/
+.hebergements-grid {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 30px;
+    margin-bottom: 70px;
+    padding: 30px;
+}
+
+.hebergements-grid i {
+    color: #0065FC
+}
+
+.fa-star.grey {
+    color: #e2e2e2;
+}
+
+.resultats {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.resultats a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+#hebergements {
+    width: 100%;
+    margin: 40px 0;
+}
+
+.block {
+    background: #f2f2f2;
+    border-radius: 20px;
+    padding: 0 30px;
+}
+
+.resultats-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 200px);
+    grid-gap: 30px;
+    width: 100%;
+}
+
+.resultats-grid article {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    padding: 5px;
+    background: white;
+    box-shadow: 10px 10px 20px 0 rgba(0,0,0,0.2);
+}
+
+.card-img {
+    height: 60%;
+    width: 100%;
+}
+
+.card-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+.card-text {
+    height: 40%;
+    padding: 10px;
+}
+
+.card-text h2 {
+    font-size: 15px;
+}
+
+.card-text p {
+    font-size: 12px;
+    margin: 5px 0;
+}
+.card-text i {
+    font-size: 15px;
+    
+}
+.show-more {
+    width: 100%;
+    margin: 40px 0 40px 8%;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+/*---------------------POPULAIRES------------*/
+
+.populaires {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+.populaires a {
+    text-decoration: none;
+    color: black;
+}
+
+.populaires-title {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 45px;
+}
+
+.populaires-title i {
+    font-size: 25px;
+}
+.populaires-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 140px);
+    grid-gap: 30px;
+    width: 100%;
+}
+
+.card-img-pop img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 0 0 20px;
+}
+
+.populaires-grid article {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    padding: 5px;
+    background: white;
+    box-shadow: 10px 10px 20px 0 rgba(0,0,0,0.2);
+}
+
+.card-img-pop {
+    height: 100%;
+    width: 40%;
+}
+
+.card-text-pop {
+    width: 60%;
+    padding: 10px
+}
+
+.card-text-pop h3 {
+    font-size: 18px;
+}
+
+.card-text-pop p {
+    font-size: 15px;
+    margin: 10px 0;
+}
+
+.card-text-pop p:last-of-type {
+    margin: 20px 0;
+}
+
+.card-text-pop strong {
+    font-weight: bold;
+}
+.fa-chart-line.black {
+    color: black;
+}
+
+@media screen and (max-width: 576px) {
+    .hebergements-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr auto;
+        grid-gap: 40px;
+        padding: 0;
+    }
+
+    .resultats {
+        background: white;
+        order: 2;
+    }
+
+    .block {
+        border-radius: 0;
+    }
+
+    .resultats-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 200px);
+    }
+
+}
 /*-------------------ACTIVITES-----------------*/
+.section-activites {
+    padding: 0 30px;
+}
+
 #activites {
     font-size: 20px;
     font-weight: bold;
@@ -237,44 +490,64 @@ button {
     grid-area: activity-6;
 }
 
-.card-bloc {
+.card-block {
     width: 100%;
     height: 100%;
 }
 
-.card-bloc img {
+.card-block img {
     width: 100%;
     height: 99%;
     object-fit: cover;
     border-radius: 20px;
 }
 
-.card-bloc a {
+.card-block a {
     text-decoration: none;
     color: initial;
     cursor: pointer;
 }
 
-.card-bloc h2 {
+.card-block h2 {
     font-size: 18px;
     background: white;
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding: 10px 0 10px 15px;
+    padding: 20px 0 20px 20px;
     border-radius: 0 0 20px 20px;
+}
+
+@media screen and (max-width: 576px) {
+    .container-activites {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 200px);
+        grid-template-areas: 
+            "activity-1"
+            "activity-2"
+            "activity-3"
+            "activity-4"
+            "activity-5"
+            "activity-6";
+        height: 1300px;
+        margin-bottom: 100px;
+    }
 }
 /*--------------------FOOTER-------------------*/
 
 footer {
     background: #f2f2f2;
+    width: 100%;
+    padding: 30px;
 }
 .footer {
+    max-width: 1440px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1440px;
     margin: 0 auto;
+    width: 100%;
 }
 
 .footer-block {
@@ -297,4 +570,13 @@ footer {
 
 .help-block {
     margin-right: 20%;
+}
+
+@media screen and (max-width: 576px) {
+    
+    .footer {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
